fixed hero ui issue on mobile

--- a/Components/UI/Layout/Sections/FormHeroSection/FormHeroSection.module.scss
+++ b/Components/UI/Layout/Sections/FormHeroSection/FormHeroSection.module.scss
@@ -1,7 +1,7 @@
 .section {
     padding: 80px 0 40px 0;
     background: var(--light-surface-container-lowest);
-    @media(max-width: 1100px) { 
+    @media(max-width: 1200px) { 
         padding: 88px 0 40px 0;
     }
     .container {
@@ -30,7 +30,7 @@
                margin-top: 48px; 
     
             }
-            @media(max-width: 550px) { 
+            @media(max-width: 1200px) { 
                 grid-template-columns: 1fr;
                 gap: 0;
 
@@ -40,13 +40,13 @@
 
                 .imageWraper1{ 
                     padding-bottom: 150%; 
-                    @media(max-width: 550px) { 
+                    @media(max-width: 1200px) { 
                         padding-bottom: 100%; 
                     }
                 }
                 .imageWraper2{ 
                     padding-bottom: 120%; 
-                    @media(max-width: 550px) { 
+                    @media(max-width: 1200px) { 
                         display: none; 
                      }
                 }
@@ -90,7 +90,7 @@
                     }
                     background: var(--dark-secondary); 
 
-                    @media(max-width: 550px) { 
+                    @media(max-width: 1200px) { 
                         display: none; 
                      }
                     &::after{ 
@@ -109,7 +109,12 @@
         grid-column: 8 / 13;
         max-width: 600px; 
       
-       
+          @media(max-width: 1200px) { 
+                        text-align: center;
+                              margin: 0 auto; 
+                              max-width: 900px
+
+                     }
         .formWrapper {
             background: var(--light-surface-container-low);
             padding: 24px 16px;
